--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 layout: page
 title: "关于小鸟一然"
 description: "「微信：sailei2」"
-header-img: "img/bg-me-2022.jpg"
+header-img: "img/1731326096390.jpg"
 header-mask: 0.3
 multilingual: true
 ---
